# chess-game-tcp

./: .gitignore  CMakeLists.txt  Makefile  README.md  accounts.txt  client  client.c  client.cpp  client2.cpp  helper.cpp  nlohmann_jsonConfig.cmake  server  server.cpp
GUI/: ChessTCP.sln
GUI/Chess/: ChallengeScreen.cpp  ChallengeScreen.hpp  Chess.aps  Chess.rc  Chess.vcxproj  Chess.vcxproj.filters  ChessBoardScreen.cpp  ChessBoardScreen.hpp  ClassDiagram.cd  Connector.hpp  LoginScreen.cpp  LoginScreen.hpp  MainMenu.cpp  MainMenu.hpp  OnlineUserListScreen.cpp  OnlineUserListScreen.hpp  ResultScreen.cpp  ResultScreen.hpp  ScreenManager.cpp  ScreenManager.hpp  TcpClient.cpp  TcpClient.hpp  UserEntry.cpp  UserEntry.hpp  main.cpp  resource.h
GUI/Chess/x64/Debug/: Chess.exe.recipe  Chess.ilk  Chess.res  vc143.idb
GUI/Chess/x64/Debug/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chess.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
GUI/Chess/x64/Release/Chess.tlog/: Chess.lastbuildstate
GUI/enc_temp_folder/fce45fb61fa366dfa799333992bc40/: ChessBoardScreen.cpp
server-remake/: server.cpp
